// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generator functions: function return function 1`] = `
Array [
  "hi lolo taged - 0",
  "hi lolo taged - 1",
  "hi lolo taged - 2",
  "hi lolo taged - 0",
  "hi lolo taged - 1",
  "hi lolo taged - 2",
  "hi toto taged - 0",
  "hi toto taged - 1",
  "hi toto taged - 2",
  "hi toto taged - 0",
  "hi toto taged - 1",
  "hi toto taged - 2",
]
`;

exports[`Generator functions: function return function 2`] = `
Array [
  "hi lolo taged - 0",
  "hi lolo taged - 1",
  "hi lolo taged - 2",
  "hi lolo taged - 0",
  "hi lolo taged - 1",
  "hi lolo taged - 2",
  "hi lolo tageddd - 0",
  "hi lolo tageddd - 1",
  "hi lolo tageddd - 2",
  "hi lolo tageddd - 0",
  "hi lolo tageddd - 1",
  "hi lolo tageddd - 2",
  "hi toto taged - 0",
  "hi toto taged - 1",
  "hi toto taged - 2",
  "hi toto taged - 0",
  "hi toto taged - 1",
  "hi toto taged - 2",
  "hi toto tageddd - 0",
  "hi toto tageddd - 1",
  "hi toto tageddd - 2",
  "hi toto tageddd - 0",
  "hi toto tageddd - 1",
  "hi toto tageddd - 2",
]
`;

exports[`Generator functions: nested 1`] = `
Array [
  "hi hi ee - 0 - 0",
  "hi hi ee - 0 - 1",
  "hi hi ee - 0 - 2",
  "hi hi ee - 1 - 0",
  "hi hi ee - 1 - 1",
  "hi hi ee - 1 - 2",
  "hi hi ee - 2 - 0",
  "hi hi ee - 2 - 1",
  "hi hi ee - 2 - 2",
]
`;

exports[`Generator functions: simple 1`] = `
Array [
  "hi ee - 0",
  "hi ee - 1",
  "hi ee - 2",
]
`;

exports[`Generator functions: super nested 1`] = `
Array [
  "hi hi hi hi hi ee - 0 - 0 - 0 - 0 - 0",
  "hi hi hi hi hi ee - 0 - 0 - 0 - 0 - 1",
  "hi hi hi hi hi ee - 0 - 0 - 0 - 0 - 2",
  "hi hi hi hi hi ee - 0 - 0 - 0 - 1 - 0",
  "hi hi hi hi hi ee - 0 - 0 - 0 - 1 - 1",
  "hi hi hi hi hi ee - 0 - 0 - 0 - 1 - 2",
  "hi hi hi hi hi ee - 0 - 0 - 0 - 2 - 0",
  "hi hi hi hi hi ee - 0 - 0 - 0 - 2 - 1",
  "hi hi hi hi hi ee - 0 - 0 - 0 - 2 - 2",
  "hi hi hi hi hi ee - 0 - 0 - 1 - 0 - 0",
  "hi hi hi hi hi ee - 0 - 0 - 1 - 0 - 1",
  "hi hi hi hi hi ee - 0 - 0 - 1 - 0 - 2",
  "hi hi hi hi hi ee - 0 - 0 - 1 - 1 - 0",
  "hi hi hi hi hi ee - 0 - 0 - 1 - 1 - 1",
  "hi hi hi hi hi ee - 0 - 0 - 1 - 1 - 2",
  "hi hi hi hi hi ee - 0 - 0 - 1 - 2 - 0",
  "hi hi hi hi hi ee - 0 - 0 - 1 - 2 - 1",
  "hi hi hi hi hi ee - 0 - 0 - 1 - 2 - 2",
  "hi hi hi hi hi ee - 0 - 0 - 2 - 0 - 0",
  "hi hi hi hi hi ee - 0 - 0 - 2 - 0 - 1",
  "hi hi hi hi hi ee - 0 - 0 - 2 - 0 - 2",
  "hi hi hi hi hi ee - 0 - 0 - 2 - 1 - 0",
  "hi hi hi hi hi ee - 0 - 0 - 2 - 1 - 1",
  "hi hi hi hi hi ee - 0 - 0 - 2 - 1 - 2",
  "hi hi hi hi hi ee - 0 - 0 - 2 - 2 - 0",
  "hi hi hi hi hi ee - 0 - 0 - 2 - 2 - 1",
  "hi hi hi hi hi ee - 0 - 0 - 2 - 2 - 2",
  "hi hi hi hi hi ee - 0 - 1 - 0 - 0 - 0",
  "hi hi hi hi hi ee - 0 - 1 - 0 - 0 - 1",
  "hi hi hi hi hi ee - 0 - 1 - 0 - 0 - 2",
  "hi hi hi hi hi ee - 0 - 1 - 0 - 1 - 0",
  "hi hi hi hi hi ee - 0 - 1 - 0 - 1 - 1",
  "hi hi hi hi hi ee - 0 - 1 - 0 - 1 - 2",
  "hi hi hi hi hi ee - 0 - 1 - 0 - 2 - 0",
  "hi hi hi hi hi ee - 0 - 1 - 0 - 2 - 1",
  "hi hi hi hi hi ee - 0 - 1 - 0 - 2 - 2",
  "hi hi hi hi hi ee - 0 - 1 - 1 - 0 - 0",
  "hi hi hi hi hi ee - 0 - 1 - 1 - 0 - 1",
  "hi hi hi hi hi ee - 0 - 1 - 1 - 0 - 2",
  "hi hi hi hi hi ee - 0 - 1 - 1 - 1 - 0",
  "hi hi hi hi hi ee - 0 - 1 - 1 - 1 - 1",
  "hi hi hi hi hi ee - 0 - 1 - 1 - 1 - 2",
  "hi hi hi hi hi ee - 0 - 1 - 1 - 2 - 0",
  "hi hi hi hi hi ee - 0 - 1 - 1 - 2 - 1",
  "hi hi hi hi hi ee - 0 - 1 - 1 - 2 - 2",
  "hi hi hi hi hi ee - 0 - 1 - 2 - 0 - 0",
  "hi hi hi hi hi ee - 0 - 1 - 2 - 0 - 1",
  "hi hi hi hi hi ee - 0 - 1 - 2 - 0 - 2",
  "hi hi hi hi hi ee - 0 - 1 - 2 - 1 - 0",
  "hi hi hi hi hi ee - 0 - 1 - 2 - 1 - 1",
  "hi hi hi hi hi ee - 0 - 1 - 2 - 1 - 2",
  "hi hi hi hi hi ee - 0 - 1 - 2 - 2 - 0",
  "hi hi hi hi hi ee - 0 - 1 - 2 - 2 - 1",
  "hi hi hi hi hi ee - 0 - 1 - 2 - 2 - 2",
  "hi hi hi hi hi ee - 0 - 2 - 0 - 0 - 0",
  "hi hi hi hi hi ee - 0 - 2 - 0 - 0 - 1",
  "hi hi hi hi hi ee - 0 - 2 - 0 - 0 - 2",
  "hi hi hi hi hi ee - 0 - 2 - 0 - 1 - 0",
  "hi hi hi hi hi ee - 0 - 2 - 0 - 1 - 1",
  "hi hi hi hi hi ee - 0 - 2 - 0 - 1 - 2",
  "hi hi hi hi hi ee - 0 - 2 - 0 - 2 - 0",
  "hi hi hi hi hi ee - 0 - 2 - 0 - 2 - 1",
  "hi hi hi hi hi ee - 0 - 2 - 0 - 2 - 2",
  "hi hi hi hi hi ee - 0 - 2 - 1 - 0 - 0",
  "hi hi hi hi hi ee - 0 - 2 - 1 - 0 - 1",
  "hi hi hi hi hi ee - 0 - 2 - 1 - 0 - 2",
  "hi hi hi hi hi ee - 0 - 2 - 1 - 1 - 0",
  "hi hi hi hi hi ee - 0 - 2 - 1 - 1 - 1",
  "hi hi hi hi hi ee - 0 - 2 - 1 - 1 - 2",
  "hi hi hi hi hi ee - 0 - 2 - 1 - 2 - 0",
  "hi hi hi hi hi ee - 0 - 2 - 1 - 2 - 1",
  "hi hi hi hi hi ee - 0 - 2 - 1 - 2 - 2",
  "hi hi hi hi hi ee - 0 - 2 - 2 - 0 - 0",
  "hi hi hi hi hi ee - 0 - 2 - 2 - 0 - 1",
  "hi hi hi hi hi ee - 0 - 2 - 2 - 0 - 2",
  "hi hi hi hi hi ee - 0 - 2 - 2 - 1 - 0",
  "hi hi hi hi hi ee - 0 - 2 - 2 - 1 - 1",
  "hi hi hi hi hi ee - 0 - 2 - 2 - 1 - 2",
  "hi hi hi hi hi ee - 0 - 2 - 2 - 2 - 0",
  "hi hi hi hi hi ee - 0 - 2 - 2 - 2 - 1",
  "hi hi hi hi hi ee - 0 - 2 - 2 - 2 - 2",
  "hi hi hi hi hi ee - 1 - 0 - 0 - 0 - 0",
  "hi hi hi hi hi ee - 1 - 0 - 0 - 0 - 1",
  "hi hi hi hi hi ee - 1 - 0 - 0 - 0 - 2",
  "hi hi hi hi hi ee - 1 - 0 - 0 - 1 - 0",
  "hi hi hi hi hi ee - 1 - 0 - 0 - 1 - 1",
  "hi hi hi hi hi ee - 1 - 0 - 0 - 1 - 2",
  "hi hi hi hi hi ee - 1 - 0 - 0 - 2 - 0",
  "hi hi hi hi hi ee - 1 - 0 - 0 - 2 - 1",
  "hi hi hi hi hi ee - 1 - 0 - 0 - 2 - 2",
  "hi hi hi hi hi ee - 1 - 0 - 1 - 0 - 0",
  "hi hi hi hi hi ee - 1 - 0 - 1 - 0 - 1",
  "hi hi hi hi hi ee - 1 - 0 - 1 - 0 - 2",
  "hi hi hi hi hi ee - 1 - 0 - 1 - 1 - 0",
  "hi hi hi hi hi ee - 1 - 0 - 1 - 1 - 1",
  "hi hi hi hi hi ee - 1 - 0 - 1 - 1 - 2",
  "hi hi hi hi hi ee - 1 - 0 - 1 - 2 - 0",
  "hi hi hi hi hi ee - 1 - 0 - 1 - 2 - 1",
  "hi hi hi hi hi ee - 1 - 0 - 1 - 2 - 2",
  "hi hi hi hi hi ee - 1 - 0 - 2 - 0 - 0",
  "hi hi hi hi hi ee - 1 - 0 - 2 - 0 - 1",
  "hi hi hi hi hi ee - 1 - 0 - 2 - 0 - 2",
  "hi hi hi hi hi ee - 1 - 0 - 2 - 1 - 0",
  "hi hi hi hi hi ee - 1 - 0 - 2 - 1 - 1",
  "hi hi hi hi hi ee - 1 - 0 - 2 - 1 - 2",
  "hi hi hi hi hi ee - 1 - 0 - 2 - 2 - 0",
  "hi hi hi hi hi ee - 1 - 0 - 2 - 2 - 1",
  "hi hi hi hi hi ee - 1 - 0 - 2 - 2 - 2",
  "hi hi hi hi hi ee - 1 - 1 - 0 - 0 - 0",
  "hi hi hi hi hi ee - 1 - 1 - 0 - 0 - 1",
  "hi hi hi hi hi ee - 1 - 1 - 0 - 0 - 2",
  "hi hi hi hi hi ee - 1 - 1 - 0 - 1 - 0",
  "hi hi hi hi hi ee - 1 - 1 - 0 - 1 - 1",
  "hi hi hi hi hi ee - 1 - 1 - 0 - 1 - 2",
  "hi hi hi hi hi ee - 1 - 1 - 0 - 2 - 0",
  "hi hi hi hi hi ee - 1 - 1 - 0 - 2 - 1",
  "hi hi hi hi hi ee - 1 - 1 - 0 - 2 - 2",
  "hi hi hi hi hi ee - 1 - 1 - 1 - 0 - 0",
  "hi hi hi hi hi ee - 1 - 1 - 1 - 0 - 1",
  "hi hi hi hi hi ee - 1 - 1 - 1 - 0 - 2",
  "hi hi hi hi hi ee - 1 - 1 - 1 - 1 - 0",
  "hi hi hi hi hi ee - 1 - 1 - 1 - 1 - 1",
  "hi hi hi hi hi ee - 1 - 1 - 1 - 1 - 2",
  "hi hi hi hi hi ee - 1 - 1 - 1 - 2 - 0",
  "hi hi hi hi hi ee - 1 - 1 - 1 - 2 - 1",
  "hi hi hi hi hi ee - 1 - 1 - 1 - 2 - 2",
  "hi hi hi hi hi ee - 1 - 1 - 2 - 0 - 0",
  "hi hi hi hi hi ee - 1 - 1 - 2 - 0 - 1",
  "hi hi hi hi hi ee - 1 - 1 - 2 - 0 - 2",
  "hi hi hi hi hi ee - 1 - 1 - 2 - 1 - 0",
  "hi hi hi hi hi ee - 1 - 1 - 2 - 1 - 1",
  "hi hi hi hi hi ee - 1 - 1 - 2 - 1 - 2",
  "hi hi hi hi hi ee - 1 - 1 - 2 - 2 - 0",
  "hi hi hi hi hi ee - 1 - 1 - 2 - 2 - 1",
  "hi hi hi hi hi ee - 1 - 1 - 2 - 2 - 2",
  "hi hi hi hi hi ee - 1 - 2 - 0 - 0 - 0",
  "hi hi hi hi hi ee - 1 - 2 - 0 - 0 - 1",
  "hi hi hi hi hi ee - 1 - 2 - 0 - 0 - 2",
  "hi hi hi hi hi ee - 1 - 2 - 0 - 1 - 0",
  "hi hi hi hi hi ee - 1 - 2 - 0 - 1 - 1",
  "hi hi hi hi hi ee - 1 - 2 - 0 - 1 - 2",
  "hi hi hi hi hi ee - 1 - 2 - 0 - 2 - 0",
  "hi hi hi hi hi ee - 1 - 2 - 0 - 2 - 1",
  "hi hi hi hi hi ee - 1 - 2 - 0 - 2 - 2",
  "hi hi hi hi hi ee - 1 - 2 - 1 - 0 - 0",
  "hi hi hi hi hi ee - 1 - 2 - 1 - 0 - 1",
  "hi hi hi hi hi ee - 1 - 2 - 1 - 0 - 2",
  "hi hi hi hi hi ee - 1 - 2 - 1 - 1 - 0",
  "hi hi hi hi hi ee - 1 - 2 - 1 - 1 - 1",
  "hi hi hi hi hi ee - 1 - 2 - 1 - 1 - 2",
  "hi hi hi hi hi ee - 1 - 2 - 1 - 2 - 0",
  "hi hi hi hi hi ee - 1 - 2 - 1 - 2 - 1",
  "hi hi hi hi hi ee - 1 - 2 - 1 - 2 - 2",
  "hi hi hi hi hi ee - 1 - 2 - 2 - 0 - 0",
  "hi hi hi hi hi ee - 1 - 2 - 2 - 0 - 1",
  "hi hi hi hi hi ee - 1 - 2 - 2 - 0 - 2",
  "hi hi hi hi hi ee - 1 - 2 - 2 - 1 - 0",
  "hi hi hi hi hi ee - 1 - 2 - 2 - 1 - 1",
  "hi hi hi hi hi ee - 1 - 2 - 2 - 1 - 2",
  "hi hi hi hi hi ee - 1 - 2 - 2 - 2 - 0",
  "hi hi hi hi hi ee - 1 - 2 - 2 - 2 - 1",
  "hi hi hi hi hi ee - 1 - 2 - 2 - 2 - 2",
  "hi hi hi hi hi ee - 2 - 0 - 0 - 0 - 0",
  "hi hi hi hi hi ee - 2 - 0 - 0 - 0 - 1",
  "hi hi hi hi hi ee - 2 - 0 - 0 - 0 - 2",
  "hi hi hi hi hi ee - 2 - 0 - 0 - 1 - 0",
  "hi hi hi hi hi ee - 2 - 0 - 0 - 1 - 1",
  "hi hi hi hi hi ee - 2 - 0 - 0 - 1 - 2",
  "hi hi hi hi hi ee - 2 - 0 - 0 - 2 - 0",
  "hi hi hi hi hi ee - 2 - 0 - 0 - 2 - 1",
  "hi hi hi hi hi ee - 2 - 0 - 0 - 2 - 2",
  "hi hi hi hi hi ee - 2 - 0 - 1 - 0 - 0",
  "hi hi hi hi hi ee - 2 - 0 - 1 - 0 - 1",
  "hi hi hi hi hi ee - 2 - 0 - 1 - 0 - 2",
  "hi hi hi hi hi ee - 2 - 0 - 1 - 1 - 0",
  "hi hi hi hi hi ee - 2 - 0 - 1 - 1 - 1",
  "hi hi hi hi hi ee - 2 - 0 - 1 - 1 - 2",
  "hi hi hi hi hi ee - 2 - 0 - 1 - 2 - 0",
  "hi hi hi hi hi ee - 2 - 0 - 1 - 2 - 1",
  "hi hi hi hi hi ee - 2 - 0 - 1 - 2 - 2",
  "hi hi hi hi hi ee - 2 - 0 - 2 - 0 - 0",
  "hi hi hi hi hi ee - 2 - 0 - 2 - 0 - 1",
  "hi hi hi hi hi ee - 2 - 0 - 2 - 0 - 2",
  "hi hi hi hi hi ee - 2 - 0 - 2 - 1 - 0",
  "hi hi hi hi hi ee - 2 - 0 - 2 - 1 - 1",
  "hi hi hi hi hi ee - 2 - 0 - 2 - 1 - 2",
  "hi hi hi hi hi ee - 2 - 0 - 2 - 2 - 0",
  "hi hi hi hi hi ee - 2 - 0 - 2 - 2 - 1",
  "hi hi hi hi hi ee - 2 - 0 - 2 - 2 - 2",
  "hi hi hi hi hi ee - 2 - 1 - 0 - 0 - 0",
  "hi hi hi hi hi ee - 2 - 1 - 0 - 0 - 1",
  "hi hi hi hi hi ee - 2 - 1 - 0 - 0 - 2",
  "hi hi hi hi hi ee - 2 - 1 - 0 - 1 - 0",
  "hi hi hi hi hi ee - 2 - 1 - 0 - 1 - 1",
  "hi hi hi hi hi ee - 2 - 1 - 0 - 1 - 2",
  "hi hi hi hi hi ee - 2 - 1 - 0 - 2 - 0",
  "hi hi hi hi hi ee - 2 - 1 - 0 - 2 - 1",
  "hi hi hi hi hi ee - 2 - 1 - 0 - 2 - 2",
  "hi hi hi hi hi ee - 2 - 1 - 1 - 0 - 0",
  "hi hi hi hi hi ee - 2 - 1 - 1 - 0 - 1",
  "hi hi hi hi hi ee - 2 - 1 - 1 - 0 - 2",
  "hi hi hi hi hi ee - 2 - 1 - 1 - 1 - 0",
  "hi hi hi hi hi ee - 2 - 1 - 1 - 1 - 1",
  "hi hi hi hi hi ee - 2 - 1 - 1 - 1 - 2",
  "hi hi hi hi hi ee - 2 - 1 - 1 - 2 - 0",
  "hi hi hi hi hi ee - 2 - 1 - 1 - 2 - 1",
  "hi hi hi hi hi ee - 2 - 1 - 1 - 2 - 2",
  "hi hi hi hi hi ee - 2 - 1 - 2 - 0 - 0",
  "hi hi hi hi hi ee - 2 - 1 - 2 - 0 - 1",
  "hi hi hi hi hi ee - 2 - 1 - 2 - 0 - 2",
  "hi hi hi hi hi ee - 2 - 1 - 2 - 1 - 0",
  "hi hi hi hi hi ee - 2 - 1 - 2 - 1 - 1",
  "hi hi hi hi hi ee - 2 - 1 - 2 - 1 - 2",
  "hi hi hi hi hi ee - 2 - 1 - 2 - 2 - 0",
  "hi hi hi hi hi ee - 2 - 1 - 2 - 2 - 1",
  "hi hi hi hi hi ee - 2 - 1 - 2 - 2 - 2",
  "hi hi hi hi hi ee - 2 - 2 - 0 - 0 - 0",
  "hi hi hi hi hi ee - 2 - 2 - 0 - 0 - 1",
  "hi hi hi hi hi ee - 2 - 2 - 0 - 0 - 2",
  "hi hi hi hi hi ee - 2 - 2 - 0 - 1 - 0",
  "hi hi hi hi hi ee - 2 - 2 - 0 - 1 - 1",
  "hi hi hi hi hi ee - 2 - 2 - 0 - 1 - 2",
  "hi hi hi hi hi ee - 2 - 2 - 0 - 2 - 0",
  "hi hi hi hi hi ee - 2 - 2 - 0 - 2 - 1",
  "hi hi hi hi hi ee - 2 - 2 - 0 - 2 - 2",
  "hi hi hi hi hi ee - 2 - 2 - 1 - 0 - 0",
  "hi hi hi hi hi ee - 2 - 2 - 1 - 0 - 1",
  "hi hi hi hi hi ee - 2 - 2 - 1 - 0 - 2",
  "hi hi hi hi hi ee - 2 - 2 - 1 - 1 - 0",
  "hi hi hi hi hi ee - 2 - 2 - 1 - 1 - 1",
  "hi hi hi hi hi ee - 2 - 2 - 1 - 1 - 2",
  "hi hi hi hi hi ee - 2 - 2 - 1 - 2 - 0",
  "hi hi hi hi hi ee - 2 - 2 - 1 - 2 - 1",
  "hi hi hi hi hi ee - 2 - 2 - 1 - 2 - 2",
  "hi hi hi hi hi ee - 2 - 2 - 2 - 0 - 0",
  "hi hi hi hi hi ee - 2 - 2 - 2 - 0 - 1",
  "hi hi hi hi hi ee - 2 - 2 - 2 - 0 - 2",
  "hi hi hi hi hi ee - 2 - 2 - 2 - 1 - 0",
  "hi hi hi hi hi ee - 2 - 2 - 2 - 1 - 1",
  "hi hi hi hi hi ee - 2 - 2 - 2 - 1 - 2",
  "hi hi hi hi hi ee - 2 - 2 - 2 - 2 - 0",
  "hi hi hi hi hi ee - 2 - 2 - 2 - 2 - 1",
  "hi hi hi hi hi ee - 2 - 2 - 2 - 2 - 2",
]
`;

exports[`Generator functions: super nested 2 1`] = `
Array [
  "hi hi hi hi hi lolo - 0 - 0 - 0 - 0 - 0",
  "hi hi hi hi hi lolo - 0 - 0 - 0 - 0 - 1",
  "hi hi hi hi hi lolo - 0 - 0 - 0 - 0 - 2",
  "hi hi hi hi hi lolo - 0 - 0 - 0 - 1 - 0",
  "hi hi hi hi hi lolo - 0 - 0 - 0 - 1 - 1",
  "hi hi hi hi hi lolo - 0 - 0 - 0 - 1 - 2",
  "hi hi hi hi hi lolo - 0 - 0 - 0 - 2 - 0",
  "hi hi hi hi hi lolo - 0 - 0 - 0 - 2 - 1",
  "hi hi hi hi hi lolo - 0 - 0 - 0 - 2 - 2",
  "hi hi hi hi hi lolo - 0 - 0 - 1 - 0 - 0",
  "hi hi hi hi hi lolo - 0 - 0 - 1 - 0 - 1",
  "hi hi hi hi hi lolo - 0 - 0 - 1 - 0 - 2",
  "hi hi hi hi hi lolo - 0 - 0 - 1 - 1 - 0",
  "hi hi hi hi hi lolo - 0 - 0 - 1 - 1 - 1",
  "hi hi hi hi hi lolo - 0 - 0 - 1 - 1 - 2",
  "hi hi hi hi hi lolo - 0 - 0 - 1 - 2 - 0",
  "hi hi hi hi hi lolo - 0 - 0 - 1 - 2 - 1",
  "hi hi hi hi hi lolo - 0 - 0 - 1 - 2 - 2",
  "hi hi hi hi hi lolo - 0 - 0 - 2 - 0 - 0",
  "hi hi hi hi hi lolo - 0 - 0 - 2 - 0 - 1",
  "hi hi hi hi hi lolo - 0 - 0 - 2 - 0 - 2",
  "hi hi hi hi hi lolo - 0 - 0 - 2 - 1 - 0",
  "hi hi hi hi hi lolo - 0 - 0 - 2 - 1 - 1",
  "hi hi hi hi hi lolo - 0 - 0 - 2 - 1 - 2",
  "hi hi hi hi hi lolo - 0 - 0 - 2 - 2 - 0",
  "hi hi hi hi hi lolo - 0 - 0 - 2 - 2 - 1",
  "hi hi hi hi hi lolo - 0 - 0 - 2 - 2 - 2",
  "hi hi hi hi hi lolo - 0 - 1 - 0 - 0 - 0",
  "hi hi hi hi hi lolo - 0 - 1 - 0 - 0 - 1",
  "hi hi hi hi hi lolo - 0 - 1 - 0 - 0 - 2",
  "hi hi hi hi hi lolo - 0 - 1 - 0 - 1 - 0",
  "hi hi hi hi hi lolo - 0 - 1 - 0 - 1 - 1",
  "hi hi hi hi hi lolo - 0 - 1 - 0 - 1 - 2",
  "hi hi hi hi hi lolo - 0 - 1 - 0 - 2 - 0",
  "hi hi hi hi hi lolo - 0 - 1 - 0 - 2 - 1",
  "hi hi hi hi hi lolo - 0 - 1 - 0 - 2 - 2",
  "hi hi hi hi hi lolo - 0 - 1 - 1 - 0 - 0",
  "hi hi hi hi hi lolo - 0 - 1 - 1 - 0 - 1",
  "hi hi hi hi hi lolo - 0 - 1 - 1 - 0 - 2",
  "hi hi hi hi hi lolo - 0 - 1 - 1 - 1 - 0",
  "hi hi hi hi hi lolo - 0 - 1 - 1 - 1 - 1",
  "hi hi hi hi hi lolo - 0 - 1 - 1 - 1 - 2",
  "hi hi hi hi hi lolo - 0 - 1 - 1 - 2 - 0",
  "hi hi hi hi hi lolo - 0 - 1 - 1 - 2 - 1",
  "hi hi hi hi hi lolo - 0 - 1 - 1 - 2 - 2",
  "hi hi hi hi hi lolo - 0 - 1 - 2 - 0 - 0",
  "hi hi hi hi hi lolo - 0 - 1 - 2 - 0 - 1",
  "hi hi hi hi hi lolo - 0 - 1 - 2 - 0 - 2",
  "hi hi hi hi hi lolo - 0 - 1 - 2 - 1 - 0",
  "hi hi hi hi hi lolo - 0 - 1 - 2 - 1 - 1",
  "hi hi hi hi hi lolo - 0 - 1 - 2 - 1 - 2",
  "hi hi hi hi hi lolo - 0 - 1 - 2 - 2 - 0",
  "hi hi hi hi hi lolo - 0 - 1 - 2 - 2 - 1",
  "hi hi hi hi hi lolo - 0 - 1 - 2 - 2 - 2",
  "hi hi hi hi hi lolo - 0 - 2 - 0 - 0 - 0",
  "hi hi hi hi hi lolo - 0 - 2 - 0 - 0 - 1",
  "hi hi hi hi hi lolo - 0 - 2 - 0 - 0 - 2",
  "hi hi hi hi hi lolo - 0 - 2 - 0 - 1 - 0",
  "hi hi hi hi hi lolo - 0 - 2 - 0 - 1 - 1",
  "hi hi hi hi hi lolo - 0 - 2 - 0 - 1 - 2",
  "hi hi hi hi hi lolo - 0 - 2 - 0 - 2 - 0",
  "hi hi hi hi hi lolo - 0 - 2 - 0 - 2 - 1",
  "hi hi hi hi hi lolo - 0 - 2 - 0 - 2 - 2",
  "hi hi hi hi hi lolo - 0 - 2 - 1 - 0 - 0",
  "hi hi hi hi hi lolo - 0 - 2 - 1 - 0 - 1",
  "hi hi hi hi hi lolo - 0 - 2 - 1 - 0 - 2",
  "hi hi hi hi hi lolo - 0 - 2 - 1 - 1 - 0",
  "hi hi hi hi hi lolo - 0 - 2 - 1 - 1 - 1",
  "hi hi hi hi hi lolo - 0 - 2 - 1 - 1 - 2",
  "hi hi hi hi hi lolo - 0 - 2 - 1 - 2 - 0",
  "hi hi hi hi hi lolo - 0 - 2 - 1 - 2 - 1",
  "hi hi hi hi hi lolo - 0 - 2 - 1 - 2 - 2",
  "hi hi hi hi hi lolo - 0 - 2 - 2 - 0 - 0",
  "hi hi hi hi hi lolo - 0 - 2 - 2 - 0 - 1",
  "hi hi hi hi hi lolo - 0 - 2 - 2 - 0 - 2",
  "hi hi hi hi hi lolo - 0 - 2 - 2 - 1 - 0",
  "hi hi hi hi hi lolo - 0 - 2 - 2 - 1 - 1",
  "hi hi hi hi hi lolo - 0 - 2 - 2 - 1 - 2",
  "hi hi hi hi hi lolo - 0 - 2 - 2 - 2 - 0",
  "hi hi hi hi hi lolo - 0 - 2 - 2 - 2 - 1",
  "hi hi hi hi hi lolo - 0 - 2 - 2 - 2 - 2",
  "hi hi hi hi hi lolo - 1 - 0 - 0 - 0 - 0",
  "hi hi hi hi hi lolo - 1 - 0 - 0 - 0 - 1",
  "hi hi hi hi hi lolo - 1 - 0 - 0 - 0 - 2",
  "hi hi hi hi hi lolo - 1 - 0 - 0 - 1 - 0",
  "hi hi hi hi hi lolo - 1 - 0 - 0 - 1 - 1",
  "hi hi hi hi hi lolo - 1 - 0 - 0 - 1 - 2",
  "hi hi hi hi hi lolo - 1 - 0 - 0 - 2 - 0",
  "hi hi hi hi hi lolo - 1 - 0 - 0 - 2 - 1",
  "hi hi hi hi hi lolo - 1 - 0 - 0 - 2 - 2",
  "hi hi hi hi hi lolo - 1 - 0 - 1 - 0 - 0",
  "hi hi hi hi hi lolo - 1 - 0 - 1 - 0 - 1",
  "hi hi hi hi hi lolo - 1 - 0 - 1 - 0 - 2",
  "hi hi hi hi hi lolo - 1 - 0 - 1 - 1 - 0",
  "hi hi hi hi hi lolo - 1 - 0 - 1 - 1 - 1",
  "hi hi hi hi hi lolo - 1 - 0 - 1 - 1 - 2",
  "hi hi hi hi hi lolo - 1 - 0 - 1 - 2 - 0",
  "hi hi hi hi hi lolo - 1 - 0 - 1 - 2 - 1",
  "hi hi hi hi hi lolo - 1 - 0 - 1 - 2 - 2",
  "hi hi hi hi hi lolo - 1 - 0 - 2 - 0 - 0",
  "hi hi hi hi hi lolo - 1 - 0 - 2 - 0 - 1",
  "hi hi hi hi hi lolo - 1 - 0 - 2 - 0 - 2",
  "hi hi hi hi hi lolo - 1 - 0 - 2 - 1 - 0",
  "hi hi hi hi hi lolo - 1 - 0 - 2 - 1 - 1",
  "hi hi hi hi hi lolo - 1 - 0 - 2 - 1 - 2",
  "hi hi hi hi hi lolo - 1 - 0 - 2 - 2 - 0",
  "hi hi hi hi hi lolo - 1 - 0 - 2 - 2 - 1",
  "hi hi hi hi hi lolo - 1 - 0 - 2 - 2 - 2",
  "hi hi hi hi hi lolo - 1 - 1 - 0 - 0 - 0",
  "hi hi hi hi hi lolo - 1 - 1 - 0 - 0 - 1",
  "hi hi hi hi hi lolo - 1 - 1 - 0 - 0 - 2",
  "hi hi hi hi hi lolo - 1 - 1 - 0 - 1 - 0",
  "hi hi hi hi hi lolo - 1 - 1 - 0 - 1 - 1",
  "hi hi hi hi hi lolo - 1 - 1 - 0 - 1 - 2",
  "hi hi hi hi hi lolo - 1 - 1 - 0 - 2 - 0",
  "hi hi hi hi hi lolo - 1 - 1 - 0 - 2 - 1",
  "hi hi hi hi hi lolo - 1 - 1 - 0 - 2 - 2",
  "hi hi hi hi hi lolo - 1 - 1 - 1 - 0 - 0",
  "hi hi hi hi hi lolo - 1 - 1 - 1 - 0 - 1",
  "hi hi hi hi hi lolo - 1 - 1 - 1 - 0 - 2",
  "hi hi hi hi hi lolo - 1 - 1 - 1 - 1 - 0",
  "hi hi hi hi hi lolo - 1 - 1 - 1 - 1 - 1",
  "hi hi hi hi hi lolo - 1 - 1 - 1 - 1 - 2",
  "hi hi hi hi hi lolo - 1 - 1 - 1 - 2 - 0",
  "hi hi hi hi hi lolo - 1 - 1 - 1 - 2 - 1",
  "hi hi hi hi hi lolo - 1 - 1 - 1 - 2 - 2",
  "hi hi hi hi hi lolo - 1 - 1 - 2 - 0 - 0",
  "hi hi hi hi hi lolo - 1 - 1 - 2 - 0 - 1",
  "hi hi hi hi hi lolo - 1 - 1 - 2 - 0 - 2",
  "hi hi hi hi hi lolo - 1 - 1 - 2 - 1 - 0",
  "hi hi hi hi hi lolo - 1 - 1 - 2 - 1 - 1",
  "hi hi hi hi hi lolo - 1 - 1 - 2 - 1 - 2",
  "hi hi hi hi hi lolo - 1 - 1 - 2 - 2 - 0",
  "hi hi hi hi hi lolo - 1 - 1 - 2 - 2 - 1",
  "hi hi hi hi hi lolo - 1 - 1 - 2 - 2 - 2",
  "hi hi hi hi hi lolo - 1 - 2 - 0 - 0 - 0",
  "hi hi hi hi hi lolo - 1 - 2 - 0 - 0 - 1",
  "hi hi hi hi hi lolo - 1 - 2 - 0 - 0 - 2",
  "hi hi hi hi hi lolo - 1 - 2 - 0 - 1 - 0",
  "hi hi hi hi hi lolo - 1 - 2 - 0 - 1 - 1",
  "hi hi hi hi hi lolo - 1 - 2 - 0 - 1 - 2",
  "hi hi hi hi hi lolo - 1 - 2 - 0 - 2 - 0",
  "hi hi hi hi hi lolo - 1 - 2 - 0 - 2 - 1",
  "hi hi hi hi hi lolo - 1 - 2 - 0 - 2 - 2",
  "hi hi hi hi hi lolo - 1 - 2 - 1 - 0 - 0",
  "hi hi hi hi hi lolo - 1 - 2 - 1 - 0 - 1",
  "hi hi hi hi hi lolo - 1 - 2 - 1 - 0 - 2",
  "hi hi hi hi hi lolo - 1 - 2 - 1 - 1 - 0",
  "hi hi hi hi hi lolo - 1 - 2 - 1 - 1 - 1",
  "hi hi hi hi hi lolo - 1 - 2 - 1 - 1 - 2",
  "hi hi hi hi hi lolo - 1 - 2 - 1 - 2 - 0",
  "hi hi hi hi hi lolo - 1 - 2 - 1 - 2 - 1",
  "hi hi hi hi hi lolo - 1 - 2 - 1 - 2 - 2",
  "hi hi hi hi hi lolo - 1 - 2 - 2 - 0 - 0",
  "hi hi hi hi hi lolo - 1 - 2 - 2 - 0 - 1",
  "hi hi hi hi hi lolo - 1 - 2 - 2 - 0 - 2",
  "hi hi hi hi hi lolo - 1 - 2 - 2 - 1 - 0",
  "hi hi hi hi hi lolo - 1 - 2 - 2 - 1 - 1",
  "hi hi hi hi hi lolo - 1 - 2 - 2 - 1 - 2",
  "hi hi hi hi hi lolo - 1 - 2 - 2 - 2 - 0",
  "hi hi hi hi hi lolo - 1 - 2 - 2 - 2 - 1",
  "hi hi hi hi hi lolo - 1 - 2 - 2 - 2 - 2",
  "hi hi hi hi hi lolo - 2 - 0 - 0 - 0 - 0",
  "hi hi hi hi hi lolo - 2 - 0 - 0 - 0 - 1",
  "hi hi hi hi hi lolo - 2 - 0 - 0 - 0 - 2",
  "hi hi hi hi hi lolo - 2 - 0 - 0 - 1 - 0",
  "hi hi hi hi hi lolo - 2 - 0 - 0 - 1 - 1",
  "hi hi hi hi hi lolo - 2 - 0 - 0 - 1 - 2",
  "hi hi hi hi hi lolo - 2 - 0 - 0 - 2 - 0",
  "hi hi hi hi hi lolo - 2 - 0 - 0 - 2 - 1",
  "hi hi hi hi hi lolo - 2 - 0 - 0 - 2 - 2",
  "hi hi hi hi hi lolo - 2 - 0 - 1 - 0 - 0",
  "hi hi hi hi hi lolo - 2 - 0 - 1 - 0 - 1",
  "hi hi hi hi hi lolo - 2 - 0 - 1 - 0 - 2",
  "hi hi hi hi hi lolo - 2 - 0 - 1 - 1 - 0",
  "hi hi hi hi hi lolo - 2 - 0 - 1 - 1 - 1",
  "hi hi hi hi hi lolo - 2 - 0 - 1 - 1 - 2",
  "hi hi hi hi hi lolo - 2 - 0 - 1 - 2 - 0",
  "hi hi hi hi hi lolo - 2 - 0 - 1 - 2 - 1",
  "hi hi hi hi hi lolo - 2 - 0 - 1 - 2 - 2",
  "hi hi hi hi hi lolo - 2 - 0 - 2 - 0 - 0",
  "hi hi hi hi hi lolo - 2 - 0 - 2 - 0 - 1",
  "hi hi hi hi hi lolo - 2 - 0 - 2 - 0 - 2",
  "hi hi hi hi hi lolo - 2 - 0 - 2 - 1 - 0",
  "hi hi hi hi hi lolo - 2 - 0 - 2 - 1 - 1",
  "hi hi hi hi hi lolo - 2 - 0 - 2 - 1 - 2",
  "hi hi hi hi hi lolo - 2 - 0 - 2 - 2 - 0",
  "hi hi hi hi hi lolo - 2 - 0 - 2 - 2 - 1",
  "hi hi hi hi hi lolo - 2 - 0 - 2 - 2 - 2",
  "hi hi hi hi hi lolo - 2 - 1 - 0 - 0 - 0",
  "hi hi hi hi hi lolo - 2 - 1 - 0 - 0 - 1",
  "hi hi hi hi hi lolo - 2 - 1 - 0 - 0 - 2",
  "hi hi hi hi hi lolo - 2 - 1 - 0 - 1 - 0",
  "hi hi hi hi hi lolo - 2 - 1 - 0 - 1 - 1",
  "hi hi hi hi hi lolo - 2 - 1 - 0 - 1 - 2",
  "hi hi hi hi hi lolo - 2 - 1 - 0 - 2 - 0",
  "hi hi hi hi hi lolo - 2 - 1 - 0 - 2 - 1",
  "hi hi hi hi hi lolo - 2 - 1 - 0 - 2 - 2",
  "hi hi hi hi hi lolo - 2 - 1 - 1 - 0 - 0",
  "hi hi hi hi hi lolo - 2 - 1 - 1 - 0 - 1",
  "hi hi hi hi hi lolo - 2 - 1 - 1 - 0 - 2",
  "hi hi hi hi hi lolo - 2 - 1 - 1 - 1 - 0",
  "hi hi hi hi hi lolo - 2 - 1 - 1 - 1 - 1",
  "hi hi hi hi hi lolo - 2 - 1 - 1 - 1 - 2",
  "hi hi hi hi hi lolo - 2 - 1 - 1 - 2 - 0",
  "hi hi hi hi hi lolo - 2 - 1 - 1 - 2 - 1",
  "hi hi hi hi hi lolo - 2 - 1 - 1 - 2 - 2",
  "hi hi hi hi hi lolo - 2 - 1 - 2 - 0 - 0",
  "hi hi hi hi hi lolo - 2 - 1 - 2 - 0 - 1",
  "hi hi hi hi hi lolo - 2 - 1 - 2 - 0 - 2",
  "hi hi hi hi hi lolo - 2 - 1 - 2 - 1 - 0",
  "hi hi hi hi hi lolo - 2 - 1 - 2 - 1 - 1",
  "hi hi hi hi hi lolo - 2 - 1 - 2 - 1 - 2",
  "hi hi hi hi hi lolo - 2 - 1 - 2 - 2 - 0",
  "hi hi hi hi hi lolo - 2 - 1 - 2 - 2 - 1",
  "hi hi hi hi hi lolo - 2 - 1 - 2 - 2 - 2",
  "hi hi hi hi hi lolo - 2 - 2 - 0 - 0 - 0",
  "hi hi hi hi hi lolo - 2 - 2 - 0 - 0 - 1",
  "hi hi hi hi hi lolo - 2 - 2 - 0 - 0 - 2",
  "hi hi hi hi hi lolo - 2 - 2 - 0 - 1 - 0",
  "hi hi hi hi hi lolo - 2 - 2 - 0 - 1 - 1",
  "hi hi hi hi hi lolo - 2 - 2 - 0 - 1 - 2",
  "hi hi hi hi hi lolo - 2 - 2 - 0 - 2 - 0",
  "hi hi hi hi hi lolo - 2 - 2 - 0 - 2 - 1",
  "hi hi hi hi hi lolo - 2 - 2 - 0 - 2 - 2",
  "hi hi hi hi hi lolo - 2 - 2 - 1 - 0 - 0",
  "hi hi hi hi hi lolo - 2 - 2 - 1 - 0 - 1",
  "hi hi hi hi hi lolo - 2 - 2 - 1 - 0 - 2",
  "hi hi hi hi hi lolo - 2 - 2 - 1 - 1 - 0",
  "hi hi hi hi hi lolo - 2 - 2 - 1 - 1 - 1",
  "hi hi hi hi hi lolo - 2 - 2 - 1 - 1 - 2",
  "hi hi hi hi hi lolo - 2 - 2 - 1 - 2 - 0",
  "hi hi hi hi hi lolo - 2 - 2 - 1 - 2 - 1",
  "hi hi hi hi hi lolo - 2 - 2 - 1 - 2 - 2",
  "hi hi hi hi hi lolo - 2 - 2 - 2 - 0 - 0",
  "hi hi hi hi hi lolo - 2 - 2 - 2 - 0 - 1",
  "hi hi hi hi hi lolo - 2 - 2 - 2 - 0 - 2",
  "hi hi hi hi hi lolo - 2 - 2 - 2 - 1 - 0",
  "hi hi hi hi hi lolo - 2 - 2 - 2 - 1 - 1",
  "hi hi hi hi hi lolo - 2 - 2 - 2 - 1 - 2",
  "hi hi hi hi hi lolo - 2 - 2 - 2 - 2 - 0",
  "hi hi hi hi hi lolo - 2 - 2 - 2 - 2 - 1",
  "hi hi hi hi hi lolo - 2 - 2 - 2 - 2 - 2",
  "hi hi hi hi hi toto - 0 - 0 - 0 - 0 - 0",
  "hi hi hi hi hi toto - 0 - 0 - 0 - 0 - 1",
  "hi hi hi hi hi toto - 0 - 0 - 0 - 0 - 2",
  "hi hi hi hi hi toto - 0 - 0 - 0 - 1 - 0",
  "hi hi hi hi hi toto - 0 - 0 - 0 - 1 - 1",
  "hi hi hi hi hi toto - 0 - 0 - 0 - 1 - 2",
  "hi hi hi hi hi toto - 0 - 0 - 0 - 2 - 0",
  "hi hi hi hi hi toto - 0 - 0 - 0 - 2 - 1",
  "hi hi hi hi hi toto - 0 - 0 - 0 - 2 - 2",
  "hi hi hi hi hi toto - 0 - 0 - 1 - 0 - 0",
  "hi hi hi hi hi toto - 0 - 0 - 1 - 0 - 1",
  "hi hi hi hi hi toto - 0 - 0 - 1 - 0 - 2",
  "hi hi hi hi hi toto - 0 - 0 - 1 - 1 - 0",
  "hi hi hi hi hi toto - 0 - 0 - 1 - 1 - 1",
  "hi hi hi hi hi toto - 0 - 0 - 1 - 1 - 2",
  "hi hi hi hi hi toto - 0 - 0 - 1 - 2 - 0",
  "hi hi hi hi hi toto - 0 - 0 - 1 - 2 - 1",
  "hi hi hi hi hi toto - 0 - 0 - 1 - 2 - 2",
  "hi hi hi hi hi toto - 0 - 0 - 2 - 0 - 0",
  "hi hi hi hi hi toto - 0 - 0 - 2 - 0 - 1",
  "hi hi hi hi hi toto - 0 - 0 - 2 - 0 - 2",
  "hi hi hi hi hi toto - 0 - 0 - 2 - 1 - 0",
  "hi hi hi hi hi toto - 0 - 0 - 2 - 1 - 1",
  "hi hi hi hi hi toto - 0 - 0 - 2 - 1 - 2",
  "hi hi hi hi hi toto - 0 - 0 - 2 - 2 - 0",
  "hi hi hi hi hi toto - 0 - 0 - 2 - 2 - 1",
  "hi hi hi hi hi toto - 0 - 0 - 2 - 2 - 2",
  "hi hi hi hi hi toto - 0 - 1 - 0 - 0 - 0",
  "hi hi hi hi hi toto - 0 - 1 - 0 - 0 - 1",
  "hi hi hi hi hi toto - 0 - 1 - 0 - 0 - 2",
  "hi hi hi hi hi toto - 0 - 1 - 0 - 1 - 0",
  "hi hi hi hi hi toto - 0 - 1 - 0 - 1 - 1",
  "hi hi hi hi hi toto - 0 - 1 - 0 - 1 - 2",
  "hi hi hi hi hi toto - 0 - 1 - 0 - 2 - 0",
  "hi hi hi hi hi toto - 0 - 1 - 0 - 2 - 1",
  "hi hi hi hi hi toto - 0 - 1 - 0 - 2 - 2",
  "hi hi hi hi hi toto - 0 - 1 - 1 - 0 - 0",
  "hi hi hi hi hi toto - 0 - 1 - 1 - 0 - 1",
  "hi hi hi hi hi toto - 0 - 1 - 1 - 0 - 2",
  "hi hi hi hi hi toto - 0 - 1 - 1 - 1 - 0",
  "hi hi hi hi hi toto - 0 - 1 - 1 - 1 - 1",
  "hi hi hi hi hi toto - 0 - 1 - 1 - 1 - 2",
  "hi hi hi hi hi toto - 0 - 1 - 1 - 2 - 0",
  "hi hi hi hi hi toto - 0 - 1 - 1 - 2 - 1",
  "hi hi hi hi hi toto - 0 - 1 - 1 - 2 - 2",
  "hi hi hi hi hi toto - 0 - 1 - 2 - 0 - 0",
  "hi hi hi hi hi toto - 0 - 1 - 2 - 0 - 1",
  "hi hi hi hi hi toto - 0 - 1 - 2 - 0 - 2",
  "hi hi hi hi hi toto - 0 - 1 - 2 - 1 - 0",
  "hi hi hi hi hi toto - 0 - 1 - 2 - 1 - 1",
  "hi hi hi hi hi toto - 0 - 1 - 2 - 1 - 2",
  "hi hi hi hi hi toto - 0 - 1 - 2 - 2 - 0",
  "hi hi hi hi hi toto - 0 - 1 - 2 - 2 - 1",
  "hi hi hi hi hi toto - 0 - 1 - 2 - 2 - 2",
  "hi hi hi hi hi toto - 0 - 2 - 0 - 0 - 0",
  "hi hi hi hi hi toto - 0 - 2 - 0 - 0 - 1",
  "hi hi hi hi hi toto - 0 - 2 - 0 - 0 - 2",
  "hi hi hi hi hi toto - 0 - 2 - 0 - 1 - 0",
  "hi hi hi hi hi toto - 0 - 2 - 0 - 1 - 1",
  "hi hi hi hi hi toto - 0 - 2 - 0 - 1 - 2",
  "hi hi hi hi hi toto - 0 - 2 - 0 - 2 - 0",
  "hi hi hi hi hi toto - 0 - 2 - 0 - 2 - 1",
  "hi hi hi hi hi toto - 0 - 2 - 0 - 2 - 2",
  "hi hi hi hi hi toto - 0 - 2 - 1 - 0 - 0",
  "hi hi hi hi hi toto - 0 - 2 - 1 - 0 - 1",
  "hi hi hi hi hi toto - 0 - 2 - 1 - 0 - 2",
  "hi hi hi hi hi toto - 0 - 2 - 1 - 1 - 0",
  "hi hi hi hi hi toto - 0 - 2 - 1 - 1 - 1",
  "hi hi hi hi hi toto - 0 - 2 - 1 - 1 - 2",
  "hi hi hi hi hi toto - 0 - 2 - 1 - 2 - 0",
  "hi hi hi hi hi toto - 0 - 2 - 1 - 2 - 1",
  "hi hi hi hi hi toto - 0 - 2 - 1 - 2 - 2",
  "hi hi hi hi hi toto - 0 - 2 - 2 - 0 - 0",
  "hi hi hi hi hi toto - 0 - 2 - 2 - 0 - 1",
  "hi hi hi hi hi toto - 0 - 2 - 2 - 0 - 2",
  "hi hi hi hi hi toto - 0 - 2 - 2 - 1 - 0",
  "hi hi hi hi hi toto - 0 - 2 - 2 - 1 - 1",
  "hi hi hi hi hi toto - 0 - 2 - 2 - 1 - 2",
  "hi hi hi hi hi toto - 0 - 2 - 2 - 2 - 0",
  "hi hi hi hi hi toto - 0 - 2 - 2 - 2 - 1",
  "hi hi hi hi hi toto - 0 - 2 - 2 - 2 - 2",
  "hi hi hi hi hi toto - 1 - 0 - 0 - 0 - 0",
  "hi hi hi hi hi toto - 1 - 0 - 0 - 0 - 1",
  "hi hi hi hi hi toto - 1 - 0 - 0 - 0 - 2",
  "hi hi hi hi hi toto - 1 - 0 - 0 - 1 - 0",
  "hi hi hi hi hi toto - 1 - 0 - 0 - 1 - 1",
  "hi hi hi hi hi toto - 1 - 0 - 0 - 1 - 2",
  "hi hi hi hi hi toto - 1 - 0 - 0 - 2 - 0",
  "hi hi hi hi hi toto - 1 - 0 - 0 - 2 - 1",
  "hi hi hi hi hi toto - 1 - 0 - 0 - 2 - 2",
  "hi hi hi hi hi toto - 1 - 0 - 1 - 0 - 0",
  "hi hi hi hi hi toto - 1 - 0 - 1 - 0 - 1",
  "hi hi hi hi hi toto - 1 - 0 - 1 - 0 - 2",
  "hi hi hi hi hi toto - 1 - 0 - 1 - 1 - 0",
  "hi hi hi hi hi toto - 1 - 0 - 1 - 1 - 1",
  "hi hi hi hi hi toto - 1 - 0 - 1 - 1 - 2",
  "hi hi hi hi hi toto - 1 - 0 - 1 - 2 - 0",
  "hi hi hi hi hi toto - 1 - 0 - 1 - 2 - 1",
  "hi hi hi hi hi toto - 1 - 0 - 1 - 2 - 2",
  "hi hi hi hi hi toto - 1 - 0 - 2 - 0 - 0",
  "hi hi hi hi hi toto - 1 - 0 - 2 - 0 - 1",
  "hi hi hi hi hi toto - 1 - 0 - 2 - 0 - 2",
  "hi hi hi hi hi toto - 1 - 0 - 2 - 1 - 0",
  "hi hi hi hi hi toto - 1 - 0 - 2 - 1 - 1",
  "hi hi hi hi hi toto - 1 - 0 - 2 - 1 - 2",
  "hi hi hi hi hi toto - 1 - 0 - 2 - 2 - 0",
  "hi hi hi hi hi toto - 1 - 0 - 2 - 2 - 1",
  "hi hi hi hi hi toto - 1 - 0 - 2 - 2 - 2",
  "hi hi hi hi hi toto - 1 - 1 - 0 - 0 - 0",
  "hi hi hi hi hi toto - 1 - 1 - 0 - 0 - 1",
  "hi hi hi hi hi toto - 1 - 1 - 0 - 0 - 2",
  "hi hi hi hi hi toto - 1 - 1 - 0 - 1 - 0",
  "hi hi hi hi hi toto - 1 - 1 - 0 - 1 - 1",
  "hi hi hi hi hi toto - 1 - 1 - 0 - 1 - 2",
  "hi hi hi hi hi toto - 1 - 1 - 0 - 2 - 0",
  "hi hi hi hi hi toto - 1 - 1 - 0 - 2 - 1",
  "hi hi hi hi hi toto - 1 - 1 - 0 - 2 - 2",
  "hi hi hi hi hi toto - 1 - 1 - 1 - 0 - 0",
  "hi hi hi hi hi toto - 1 - 1 - 1 - 0 - 1",
  "hi hi hi hi hi toto - 1 - 1 - 1 - 0 - 2",
  "hi hi hi hi hi toto - 1 - 1 - 1 - 1 - 0",
  "hi hi hi hi hi toto - 1 - 1 - 1 - 1 - 1",
  "hi hi hi hi hi toto - 1 - 1 - 1 - 1 - 2",
  "hi hi hi hi hi toto - 1 - 1 - 1 - 2 - 0",
  "hi hi hi hi hi toto - 1 - 1 - 1 - 2 - 1",
  "hi hi hi hi hi toto - 1 - 1 - 1 - 2 - 2",
  "hi hi hi hi hi toto - 1 - 1 - 2 - 0 - 0",
  "hi hi hi hi hi toto - 1 - 1 - 2 - 0 - 1",
  "hi hi hi hi hi toto - 1 - 1 - 2 - 0 - 2",
  "hi hi hi hi hi toto - 1 - 1 - 2 - 1 - 0",
  "hi hi hi hi hi toto - 1 - 1 - 2 - 1 - 1",
  "hi hi hi hi hi toto - 1 - 1 - 2 - 1 - 2",
  "hi hi hi hi hi toto - 1 - 1 - 2 - 2 - 0",
  "hi hi hi hi hi toto - 1 - 1 - 2 - 2 - 1",
  "hi hi hi hi hi toto - 1 - 1 - 2 - 2 - 2",
  "hi hi hi hi hi toto - 1 - 2 - 0 - 0 - 0",
  "hi hi hi hi hi toto - 1 - 2 - 0 - 0 - 1",
  "hi hi hi hi hi toto - 1 - 2 - 0 - 0 - 2",
  "hi hi hi hi hi toto - 1 - 2 - 0 - 1 - 0",
  "hi hi hi hi hi toto - 1 - 2 - 0 - 1 - 1",
  "hi hi hi hi hi toto - 1 - 2 - 0 - 1 - 2",
  "hi hi hi hi hi toto - 1 - 2 - 0 - 2 - 0",
  "hi hi hi hi hi toto - 1 - 2 - 0 - 2 - 1",
  "hi hi hi hi hi toto - 1 - 2 - 0 - 2 - 2",
  "hi hi hi hi hi toto - 1 - 2 - 1 - 0 - 0",
  "hi hi hi hi hi toto - 1 - 2 - 1 - 0 - 1",
  "hi hi hi hi hi toto - 1 - 2 - 1 - 0 - 2",
  "hi hi hi hi hi toto - 1 - 2 - 1 - 1 - 0",
  "hi hi hi hi hi toto - 1 - 2 - 1 - 1 - 1",
  "hi hi hi hi hi toto - 1 - 2 - 1 - 1 - 2",
  "hi hi hi hi hi toto - 1 - 2 - 1 - 2 - 0",
  "hi hi hi hi hi toto - 1 - 2 - 1 - 2 - 1",
  "hi hi hi hi hi toto - 1 - 2 - 1 - 2 - 2",
  "hi hi hi hi hi toto - 1 - 2 - 2 - 0 - 0",
  "hi hi hi hi hi toto - 1 - 2 - 2 - 0 - 1",
  "hi hi hi hi hi toto - 1 - 2 - 2 - 0 - 2",
  "hi hi hi hi hi toto - 1 - 2 - 2 - 1 - 0",
  "hi hi hi hi hi toto - 1 - 2 - 2 - 1 - 1",
  "hi hi hi hi hi toto - 1 - 2 - 2 - 1 - 2",
  "hi hi hi hi hi toto - 1 - 2 - 2 - 2 - 0",
  "hi hi hi hi hi toto - 1 - 2 - 2 - 2 - 1",
  "hi hi hi hi hi toto - 1 - 2 - 2 - 2 - 2",
  "hi hi hi hi hi toto - 2 - 0 - 0 - 0 - 0",
  "hi hi hi hi hi toto - 2 - 0 - 0 - 0 - 1",
  "hi hi hi hi hi toto - 2 - 0 - 0 - 0 - 2",
  "hi hi hi hi hi toto - 2 - 0 - 0 - 1 - 0",
  "hi hi hi hi hi toto - 2 - 0 - 0 - 1 - 1",
  "hi hi hi hi hi toto - 2 - 0 - 0 - 1 - 2",
  "hi hi hi hi hi toto - 2 - 0 - 0 - 2 - 0",
  "hi hi hi hi hi toto - 2 - 0 - 0 - 2 - 1",
  "hi hi hi hi hi toto - 2 - 0 - 0 - 2 - 2",
  "hi hi hi hi hi toto - 2 - 0 - 1 - 0 - 0",
  "hi hi hi hi hi toto - 2 - 0 - 1 - 0 - 1",
  "hi hi hi hi hi toto - 2 - 0 - 1 - 0 - 2",
  "hi hi hi hi hi toto - 2 - 0 - 1 - 1 - 0",
  "hi hi hi hi hi toto - 2 - 0 - 1 - 1 - 1",
  "hi hi hi hi hi toto - 2 - 0 - 1 - 1 - 2",
  "hi hi hi hi hi toto - 2 - 0 - 1 - 2 - 0",
  "hi hi hi hi hi toto - 2 - 0 - 1 - 2 - 1",
  "hi hi hi hi hi toto - 2 - 0 - 1 - 2 - 2",
  "hi hi hi hi hi toto - 2 - 0 - 2 - 0 - 0",
  "hi hi hi hi hi toto - 2 - 0 - 2 - 0 - 1",
  "hi hi hi hi hi toto - 2 - 0 - 2 - 0 - 2",
  "hi hi hi hi hi toto - 2 - 0 - 2 - 1 - 0",
  "hi hi hi hi hi toto - 2 - 0 - 2 - 1 - 1",
  "hi hi hi hi hi toto - 2 - 0 - 2 - 1 - 2",
  "hi hi hi hi hi toto - 2 - 0 - 2 - 2 - 0",
  "hi hi hi hi hi toto - 2 - 0 - 2 - 2 - 1",
  "hi hi hi hi hi toto - 2 - 0 - 2 - 2 - 2",
  "hi hi hi hi hi toto - 2 - 1 - 0 - 0 - 0",
  "hi hi hi hi hi toto - 2 - 1 - 0 - 0 - 1",
  "hi hi hi hi hi toto - 2 - 1 - 0 - 0 - 2",
  "hi hi hi hi hi toto - 2 - 1 - 0 - 1 - 0",
  "hi hi hi hi hi toto - 2 - 1 - 0 - 1 - 1",
  "hi hi hi hi hi toto - 2 - 1 - 0 - 1 - 2",
  "hi hi hi hi hi toto - 2 - 1 - 0 - 2 - 0",
  "hi hi hi hi hi toto - 2 - 1 - 0 - 2 - 1",
  "hi hi hi hi hi toto - 2 - 1 - 0 - 2 - 2",
  "hi hi hi hi hi toto - 2 - 1 - 1 - 0 - 0",
  "hi hi hi hi hi toto - 2 - 1 - 1 - 0 - 1",
  "hi hi hi hi hi toto - 2 - 1 - 1 - 0 - 2",
  "hi hi hi hi hi toto - 2 - 1 - 1 - 1 - 0",
  "hi hi hi hi hi toto - 2 - 1 - 1 - 1 - 1",
  "hi hi hi hi hi toto - 2 - 1 - 1 - 1 - 2",
  "hi hi hi hi hi toto - 2 - 1 - 1 - 2 - 0",
  "hi hi hi hi hi toto - 2 - 1 - 1 - 2 - 1",
  "hi hi hi hi hi toto - 2 - 1 - 1 - 2 - 2",
  "hi hi hi hi hi toto - 2 - 1 - 2 - 0 - 0",
  "hi hi hi hi hi toto - 2 - 1 - 2 - 0 - 1",
  "hi hi hi hi hi toto - 2 - 1 - 2 - 0 - 2",
  "hi hi hi hi hi toto - 2 - 1 - 2 - 1 - 0",
  "hi hi hi hi hi toto - 2 - 1 - 2 - 1 - 1",
  "hi hi hi hi hi toto - 2 - 1 - 2 - 1 - 2",
  "hi hi hi hi hi toto - 2 - 1 - 2 - 2 - 0",
  "hi hi hi hi hi toto - 2 - 1 - 2 - 2 - 1",
  "hi hi hi hi hi toto - 2 - 1 - 2 - 2 - 2",
  "hi hi hi hi hi toto - 2 - 2 - 0 - 0 - 0",
  "hi hi hi hi hi toto - 2 - 2 - 0 - 0 - 1",
  "hi hi hi hi hi toto - 2 - 2 - 0 - 0 - 2",
  "hi hi hi hi hi toto - 2 - 2 - 0 - 1 - 0",
  "hi hi hi hi hi toto - 2 - 2 - 0 - 1 - 1",
  "hi hi hi hi hi toto - 2 - 2 - 0 - 1 - 2",
  "hi hi hi hi hi toto - 2 - 2 - 0 - 2 - 0",
  "hi hi hi hi hi toto - 2 - 2 - 0 - 2 - 1",
  "hi hi hi hi hi toto - 2 - 2 - 0 - 2 - 2",
  "hi hi hi hi hi toto - 2 - 2 - 1 - 0 - 0",
  "hi hi hi hi hi toto - 2 - 2 - 1 - 0 - 1",
  "hi hi hi hi hi toto - 2 - 2 - 1 - 0 - 2",
  "hi hi hi hi hi toto - 2 - 2 - 1 - 1 - 0",
  "hi hi hi hi hi toto - 2 - 2 - 1 - 1 - 1",
  "hi hi hi hi hi toto - 2 - 2 - 1 - 1 - 2",
  "hi hi hi hi hi toto - 2 - 2 - 1 - 2 - 0",
  "hi hi hi hi hi toto - 2 - 2 - 1 - 2 - 1",
  "hi hi hi hi hi toto - 2 - 2 - 1 - 2 - 2",
  "hi hi hi hi hi toto - 2 - 2 - 2 - 0 - 0",
  "hi hi hi hi hi toto - 2 - 2 - 2 - 0 - 1",
  "hi hi hi hi hi toto - 2 - 2 - 2 - 0 - 2",
  "hi hi hi hi hi toto - 2 - 2 - 2 - 1 - 0",
  "hi hi hi hi hi toto - 2 - 2 - 2 - 1 - 1",
  "hi hi hi hi hi toto - 2 - 2 - 2 - 1 - 2",
  "hi hi hi hi hi toto - 2 - 2 - 2 - 2 - 0",
  "hi hi hi hi hi toto - 2 - 2 - 2 - 2 - 1",
  "hi hi hi hi hi toto - 2 - 2 - 2 - 2 - 2",
]
`;
